# libxrk

./: .gitignore  README.md  build.py  extract_86_data.py  pyproject.toml  setup.py  setup.sh  test_install.py  test_type_errors.py  test_types.py
.github/workflows/: code-quality.yml
src/libxrk/: __init__.py  aim_xrk.pyi  aim_xrk.pyx  base.py  gps.py
src/libxrk/data/: __init__.py  aim_xrk.pyi  aim_xrk.pyx  base.py  gps.py
tests/: test_86_xrk.py  test_get_channels_as_table.py  test_sfj_xrk.py  test_xrk_loading.py
tests/test_data/: test_data.md
